--- a/src/app/components/acceuil/acceuil.component.html
+++ b/src/app/components/acceuil/acceuil.component.html
@@ -12,20 +12,20 @@
   </header>
   <section id="container">
     <div class="container-text">
-        <h1>L'éducation est un passport pour l'avenir car demain appartient à ceux qui s'y sont préparés aujourd'hui.</h1>
+        <h1>L'Éducation Est Un Passport Pour l'Avenir Car Demain Appartient À Ceux Qui S'y Sont Préparés Aujourd'hui.</h1>
     </div>
   </section> 
 
   <!-- section a propos -->
    <section id="a-propos">
       <div class="presentation">
-          <p class="tittle-section">Presentation</p>
+          <p class="tittle-section">Présentation</p>
           <div class="description-photo">
             <div class="desc">
                 Notre site "YAS" a été crée a fin de donner un coup de main
-                pour faciliter leurs études et arrondir les ressources aux étudiant du cycle 
-                licence fondamentales dans la faculté Abdelmalek Essadi Tetouan et qui sont 
-                inscrit dans les différentes filières suivantes :  
+                pour faciliter aux étudiants ses études et arrondir des ressources du cycle 
+                licence fondamentale dans la Faculté des Sciences Tétouan Université Abdelmalek Essaâdi et qui sont 
+                inscrits dans les différentes filières :  
                 <ul>
                     <li>Sciences Mathématiques Appliquées (SMA).</li>
                     <li>Sciences Mathématiques Informatiques (SMI).</li>
