--- a/src/app/components/c1filliers/c1filliers.component.html
+++ b/src/app/components/c1filliers/c1filliers.component.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <app-navbar></app-navbar>
+        <app-navbar3></app-navbar3>
     </header>
     <main>
         <section>
@@ -59,7 +59,7 @@
                     <figure class="card" routerLink="#" >
                         <img src="../../../assets/photos/sv.png" alt="" class="card__image" />
                         <figcaption class="card__body">
-                        <h3 class="card__title">Sciences de la Vie (SVI) </h3> 
+                        <h3 class="card__title">Sciences de la Vie <br> (SVI) </h3> 
                         </figcaption>
                     </figure>
 				</div>
@@ -72,4 +72,3 @@
     
 </body>
 </html>
-
