--- a/src/app/components/cfilieres/cfilieres.component.html
+++ b/src/app/components/cfilieres/cfilieres.component.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <app-navbar></app-navbar>
+        <app-navbar3></app-navbar3>
     </header>
     <main>
         <section>
