--- a/src/app/components/filieres/filieres.component.html
+++ b/src/app/components/filieres/filieres.component.html
@@ -28,7 +28,7 @@
             d’ouverture dans d’autres domaines de mathématiques, ainsi que des enseignements 
             optionnels en économie, en finance, en informatique et dans d’autres sciences.
           </p>
-          <a href="http://www.fst.ac.ma/site/sites/default/files/Filiere_SMA_2014.pdf" class="blog-post__cta">Lire plus</a>
+          <a href="../../../assets/PDF/Filiere_SMA_2014.pdf" class="blog-post__cta">Lire plus</a>
         </div>
       </article>
       <article class="blog-post">
@@ -48,7 +48,7 @@
            filière Licence "Mathématiques", l'enseignement dans cette filière est dispensé 
            sous forme de modules disciplinaires (techniques informatiques, techniques quantitatives, ...).
           </p>
-          <a href="http://www.fst.ac.ma/site/sites/default/files/Filiere_SMI_2014.pdf" class="blog-post__cta">Lire plus</a>
+          <a href="../../../assets/PDF/Filiere_SMI_2014.pdf" class="blog-post__cta">Lire plus</a>
         </div>
       </article>
       <article class="blog-post">
@@ -66,7 +66,7 @@
           de base pluridisciplinaire en Physique, Chimie, Mathématiques et Informatique avec un profil 
             de Physique qui se dégage dans les deux derniers semestres du cycle.                 
           </p>
-          <a href="http://www.fst.ac.ma/site/sites/default/files/Filiere_SMP_2014.pdf" class="blog-post__cta">Lire plus</a>
+          <a href="../../../assets/PDF/Filiere_SMP_2014.pdf" class="blog-post__cta">Lire plus</a>
         </div>
       </article>
       <article class="blog-post">
@@ -87,7 +87,7 @@
            des connaissances scientifiques fondamentales et transversales indispensables à maitriser 
            dans le domaine de la chimie.
           </p>
-          <a href="http://www.fst.ac.ma/site/sites/default/files/Filiere_SMC_2014_0.pdf" class="blog-post__cta">Lire plus</a>
+          <a href="../../../assets/PDF/Filiere_SMC_2014_0.pdf" class="blog-post__cta">Lire plus</a>
         </div>
       </article>
       <article class="blog-post">
@@ -108,7 +108,7 @@
             l’Ecologie et la Physiologie Animale et Végétale. Cet enseignement est complété également 
             par des modules de Géologie, Chimie, Physique, Mathématiques et Langes-Communication.
           </p>
-          <a href="http://www.fst.ac.ma/site/sites/default/files/Filiere_SVI_2014.pdf" class="blog-post__cta">Lire plus</a>
+          <a href="../../../assets/PDF/Filiere_SVI_2014.pdf" class="blog-post__cta">Lire plus</a>
         </div>
       </article>
       <article class="blog-post">
@@ -127,7 +127,7 @@
            et des objets spécifiques, elles se sont développées en se diversifiant en de nombreuses disciplines 
            et sous-disciplines : astronomie, cosmologie, géologie, climatologie, etc. 
           </p>
-          <a href="http://www.fst.ac.ma/site/sites/default/files/Filiere_STU_2014_0.pdf" class="blog-post__cta">Lire plus</a>
+          <a href="../../../assets/PDF/Filiere_STU_2014_0.pdf" class="blog-post__cta">Lire plus</a>
         </div>
       </article>
     </section>
