--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -23,8 +23,8 @@
             <li><a routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" routerLink="/filieres" >FILIERES</a></li>
             <li><a routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" routerLink="/contact" >CONTACT</a></li>
             <li>
-               <label for="btn-1" class="show">SE CONNECTER</label>
-               <a href="#">SE CONNECTER</a>
+               <label for="btn-1" class="show">CONNEXION</label>
+               <a href="#">CONNEXION</a>
                <input type="checkbox" id="btn-1">
                <ul>
                   <li><a routerLink="/loginp" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" >PROFESSEUR</a></li>
