--- a/src/app/components/navbar2/navbar2.component.html
+++ b/src/app/components/navbar2/navbar2.component.html
@@ -18,6 +18,7 @@
          <li><a routerLink="/tableaup" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" >PROFESSEUR</a></li>
          <li><a routerLink="/tableau"routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" >ETUDIANT</a></li>
          <li><a routerLink="/tableaucontac"routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" >MESSAGE</a></li>
+         <li><a routerLink="/"routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" >DECONNECION</a></li>
       </ul>
    </nav>
    <script>
