--- a/src/app/components/registrer/registrer.component.html
+++ b/src/app/components/registrer/registrer.component.html
@@ -16,7 +16,7 @@
       <form [formGroup]="registerF" (ngSubmit)="register()">
         <div class="title">S'inscrire</div>
         <div *ngIf="alert" class="alert alert-success alert-dismissible" role="alert" style="padding-top: 10px !important; padding-left: 10px;">
-          <strong>Succès !</strong> Votre message a été envoyé avec succès.
+          <strong>Succès !</strong> Votre inscription est réalisée avec succès.
           <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close" style="margin-bottom: 15px;"></button>
         </div>
         <div class="user-details">
