--- a/src/app/components/tableau-p/tableau-p.component.html
+++ b/src/app/components/tableau-p/tableau-p.component.html
@@ -9,41 +9,41 @@
 <body> <app-navbar2></app-navbar2>
     <main>
       <div class="card" style="padding: 30px;">
-        <form #registerForm="ngForm" (ngSubmit)="registerProf(registerForm)">
+        <form [formGroup]="registerF" (ngSubmit)="registerProf()">
           <div class="user-details">
             <div class="input-box">
               <span class="details">Nom :</span>
-              <input type="text" placeholder="Entrer votre nom" #nom (ngModel)="nom" name="nom" id="nom" >
+              <input type="text" placeholder="Entrer votre nom" formControlName="nom" name="nom" id="nom" >
+              <small class="form-text text-muted" *ngIf="registerF.get('nom')?.touched && registerF.get('nom')?.invalid" style="color: red !important;">Nom est requis.</small>
             </div>
             <div class="input-box">
               <span class="details">Prénom :</span>
-              <input type="text" placeholder="Entrer votre prénom" #prenom (ngModel)="prenom" name="prenom" id="prenom">
+              <input type="text" placeholder="Entrer votre prénom" formControlName="prenom" name="prenom" id="prenom">
+              <small class="form-text text-muted" *ngIf="registerF.get('prenom')?.touched && registerF.get('prenom')?.invalid" style="color: red !important;">Prénom est requis.</small>
             </div>
             <div class="input-box">
               <span class="details">Email :</span>
-              <input type="email" placeholder="Entrer votre email" #email (ngModel)="email" name="email" id="email">
-            </div>
-            <div class="input-box">
-              <span class="details">Matricule :</span>
-              <input type="number" placeholder="Entrer votre matricule" #mat (ngModel)="mat" name="mat" id="mat">
+              <input type="email" placeholder="Entrer votre email" #email formControlName="email" name="email" id="email">
+              <small class="form-text text-muted" *ngIf="registerF.get('email')?.touched && registerF.get('email')?.invalid && !registerF.get('email')?.errors?.['pattern']" style="color: red !important;">Email est requis.</small>
             </div>
             <div class="input-box">
               <span class="details">Mot de passe :</span>
-              <input type="password" placeholder="Entrer votre mot de passe" #motdepasse (ngModel)="motdepasse" name="motdepasse" id="motdepasse">
+              <input type="password" placeholder="Entrer votre mot de passe"formControlName="motdepasse" name="motdepasse" id="motdepasse">
+              <small class="form-text text-muted" *ngIf="registerF.get('motdepasse')?.touched && registerF.get('motdepasse')?.invalid" style="color: red !important;">Mot de passe est requis.</small>
             </div>
           </div>
           <div class="button" >
-            <input type="submit"  value="Ajouter">
+            <input type="submit" [disabled]="registerF.invalid" value="Ajouter">
           </div>
         </form>
       </div>
         <div class="mt-5">
+          <input  class="search" type="text" name="search" [(ngModel)]="searchText" placeholder="Chercher professeur ">
             <table class="table table-bordered">
               <thead>
                 <tr>
                   <th>Nom</th>
                   <th>Prenom</th>
-                  <th>Matricule</th>
                   <th>Email</th>
                   <th>Mot de passe</th>
                   <th>Modifier</th>
@@ -52,14 +52,13 @@
                 </tr>
               </thead>
               <tbody class="tbody" >
-                <tr *ngFor="let prof of profDetails">
+                <tr *ngFor="let prof of profDetails| filter:searchText">
                   <td>{{prof.nom}}</td>
                   <td>{{prof.prenom}}</td>
-                  <td>{{prof.mat}}</td>
                   <td>{{prof.email}}</td>
                   <td>{{prof.motdepasse}}</td>
                   <td><button mat-raised-button type="button" color="primary" data-bs-toggle="modal" data-bs-target="#exampleModal"(click)="edit(prof)">Modifier</button></td>
-                  <td><button mat-raised-button type="button" color="warn" (click)="deleteProf(prof)">Supprimer</button></td>
+                  <td><button mat-raised-button type="button" color="warn"  data-bs-toggle="modal" data-bs-target="#exampleModal1" >Supprimer</button></td>
                 </tr>
               </tbody>
             </table>
@@ -69,45 +68,62 @@
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Mise à jour d'un proffesseur</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Mise à jour d'un professeur</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
-                <form #updateForm= "ngForm" (ngSubmit)="updateProf()">
+                <form [formGroup]="registerF" (ngSubmit)="updateProf()">
                   <div class="form-group">
                     <label for="nom">Nom :</label>
-                    <input type="text"  #nom [(ngModel)]="profToUpdate.nom" name="nom" id="nom"
+                    <input type="text" formControlName="nom"  #nom [(ngModel)]="profToUpdate.nom" name="nom" id="nom"
                       class="form-control" placeholder="Entrer votre Nom">
-                  </div>
-                  
+                      <small class="form-text text-muted" *ngIf="registerF.get('nom')?.touched && registerF.get('nom')?.invalid" style="color: red !important;">Nom est requis.</small>
+                  </div>                 
                   <div class="form-group">
                     <label for="prenom">Prénom :</label>
-                    <input type="text" #prenom [(ngModel)]="profToUpdate.prenom" name="prenom" id="name" class="form-control"
+                    <input type="text" formControlName="prenom" #prenom [(ngModel)]="profToUpdate.prenom" name="prenom" id="name" class="form-control"
                       placeholder="Entrer votre Prenom">
-                  </div>
-                  <div class="form-group">
-                    <label for="num">Matricule :</label>
-                    <input type="number" #mat [(ngModel)]="profToUpdate.mat" name="mat" id="mat" class="form-control"
-                      placeholder="Entrer votre Matricule ">
+                      <small class="form-text text-muted" *ngIf="registerF.get('prenom')?.touched && registerF.get('prenom')?.invalid" style="color: red !important;">Prénom est requis.</small>
                   </div>
                   <div class="form-group">
                     <label for="email">Email :</label>
-                    <input type="email" #email [(ngModel)]="profToUpdate.email" name="email" id="email"
+                    <input type="email" formControlName="email" #email [(ngModel)]="profToUpdate.email" name="email" id="email"
                       class="form-control" placeholder="Entrer votre Email">
+                      <small class="form-text text-muted" *ngIf="registerF.get('email')?.touched && registerF.get('email')?.invalid && !registerF.get('email')?.errors?.['pattern']" style="color: red !important;">Email est requis.</small>
                   </div>
                   <div class="form-group">
                     <label for="motdepasse">Mot de passe :</label>
-                    <input type="password" #motdepasse [(ngModel)]="profToUpdate.motdepasse" name="motdepasse" id="motdepasse"
+                    <input type="password" formControlName="motdepasse" #motdepasse [(ngModel)]="profToUpdate.motdepasse" name="motdepasse" id="motdepasse"
                       class="form-control" placeholder="Entrer votre Mot de passe">
+                      <small class="form-text text-muted" *ngIf="registerF.get('motdepasse')?.touched && registerF.get('motdepasse')?.invalid" style="color: red !important;">Mot de passe est requis.</small>
                   </div>
                   <div class="form-group">
-                    <input style="margin-top: 8px;" type="submit" value="Modifier" class="btn btn-warning w-100">
+                    <input style="margin-top: 10px;" position="center" data-bs-dismiss="modal" [disabled]="!registerF.valid" type="submit" value="Modifier" class="btn btn-warning w-100">
                   </div>
                 </form>
               </div>
             </div>
           </div>
-        </div>      
+        </div>   
+        <div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Suppression d'un professeur</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <div *ngFor="let prof of profDetails">
+                  Est-ce que vous êtes sûre?
+                  <div class="form-group">                    
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal" (click)="deleteProf(prof)" >Supprimer</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>   
     </main>
     
 </body>
